my-website/versioned_docs/version-0.9.1/api/alphabetical-index.mdx
---
title: "Alphabetical Index"
sidebarTitle: "Alphabetical Index"
description: "Alphabetical index of all API symbols."
---

## A

- [abs() (Expr method)](/versions/0.9.1/api/tableframe#tabsdata.Expr.abs)
- [account_key (AzureAccountKeyCredentials attribute)](/versions/0.9.1/api/credentials#tabsdata.credentials.AzureAccountKeyCredentials.account_key)
  - [(AzureAccountKeyCredentials property)](/versions/0.9.1/api/credentials#id2)
- [ACCOUNT_KEY_KEY (AzureAccountKeyCredentials attribute)](/versions/0.9.1/api/credentials#tabsdata.credentials.AzureAccountKeyCredentials.ACCOUNT_KEY_KEY)
- [account_name (AzureAccountKeyCredentials attribute)](/versions/0.9.1/api/credentials#tabsdata.credentials.AzureAccountKeyCredentials.account_name)
  - [(AzureAccountKeyCredentials property)](/versions/0.9.1/api/credentials#id3)
- [add() (Expr method)](/versions/0.9.1/api/tableframe#tabsdata.Expr.add)
- [add_business_days() (ExprDateTimeNameSpace method)](/versions/0.9.1/api/tableframe#tabsdata.tableframe.functions.datetime.ExprDateTimeNameSpace.add_business_days)
- [agg() (TableFrameGroupBy method)](/versions/0.9.1/api/tableframe#tabsdata.tableframe.lazyframe.group_by.TableFrameGroupBy.agg)
- [alias() (Expr method)](/versions/0.9.1/api/tableframe#tabsdata.Expr.alias)
- [and_() (Expr method)](/versions/0.9.1/api/tableframe#tabsdata.Expr.and_)
- [arccos() (Expr method)](/versions/0.9.1/api/tableframe#tabsdata.Expr.arccos)
- [arccosh() (Expr method)](/versions/0.9.1/api/tableframe#tabsdata.Expr.arccosh)
- [arcsin() (Expr method)](/versions/0.9.1/api/tableframe#tabsdata.Expr.arcsin)
- [arcsinh() (Expr method)](/versions/0.9.1/api/tableframe#tabsdata.Expr.arcsinh)
- [arctan() (Expr method)](/versions/0.9.1/api/tableframe#tabsdata.Expr.arctan)
- [arctanh() (Expr method)](/versions/0.9.1/api/tableframe#tabsdata.Expr.arctanh)
- [aws_access_key_id (S3AccessKeyCredentials attribute)](/versions/0.9.1/api/credentials#tabsdata.credentials.S3AccessKeyCredentials.aws_access_key_id)
  - [(S3AccessKeyCredentials property)](/versions/0.9.1/api/credentials#id4)
- [aws_secret_access_key (S3AccessKeyCredentials attribute)](/versions/0.9.1/api/credentials#tabsdata.credentials.S3AccessKeyCredentials.aws_secret_access_key)
  - [(S3AccessKeyCredentials property)](/versions/0.9.1/api/credentials#id5)
- [AzureAccountKeyCredentials (class in tabsdata.credentials)](/versions/0.9.1/api/credentials#tabsdata.credentials.AzureAccountKeyCredentials)
- [AzureDestination (class in tabsdata.tabsdatafunction)](/versions/0.9.1/api/connectors-list#tabsdata.tabsdatafunction.AzureDestination)
- [AzureSource (class in tabsdata.tabsdatafunction)](/versions/0.9.1/api/connectors-list#tabsdata.tabsdatafunction.AzureSource)

## B

- [base_utc_offset() (ExprDateTimeNameSpace method)](/versions/0.9.1/api/tableframe#tabsdata.tableframe.functions.datetime.ExprDateTimeNameSpace.base_utc_offset)

## C

- [cast() (Expr method)](/versions/0.9.1/api/tableframe#tabsdata.Expr.cast)
  - [(TableFrame method)](/versions/0.9.1/api/tableframe#tabsdata.TableFrame.cast)
- [cast_time_unit() (ExprDateTimeNameSpace method)](/versions/0.9.1/api/tableframe#tabsdata.tableframe.functions.datetime.ExprDateTimeNameSpace.cast_time_unit)
- [cbrt() (Expr method)](/versions/0.9.1/api/tableframe#tabsdata.Expr.cbrt)
- [ceil() (Expr method)](/versions/0.9.1/api/tableframe#tabsdata.Expr.ceil)
- [century() (ExprDateTimeNameSpace method)](/versions/0.9.1/api/tableframe#tabsdata.tableframe.functions.datetime.ExprDateTimeNameSpace.century)
- check_polars_api() (in module tabsdata.tableframe.lazyframe.frame)
- [clear() (TableFrame method)](/versions/0.9.1/api/tableframe#tabsdata.TableFrame.clear)
- [clip() (Expr method)](/versions/0.9.1/api/tableframe#tabsdata.Expr.clip)
- Col (class in tabsdata.tableframe.functions.col)
- [columns (TableFrame property)](/versions/0.9.1/api/tableframe#tabsdata.TableFrame.columns)
- [combine() (ExprDateTimeNameSpace method)](/versions/0.9.1/api/tableframe#tabsdata.tableframe.functions.datetime.ExprDateTimeNameSpace.combine)
- concat() (in module tabsdata)
  - (in module tabsdata.tableframe.functions.eager)
- [contains() (ExprStringNameSpace method)](/versions/0.9.1/api/tableframe#tabsdata.tableframe.expr.string.ExprStringNameSpace.contains)
- [contains_any() (ExprStringNameSpace method)](/versions/0.9.1/api/tableframe#tabsdata.tableframe.expr.string.ExprStringNameSpace.contains_any)
- [convert_time_zone() (ExprDateTimeNameSpace method)](/versions/0.9.1/api/tableframe#tabsdata.tableframe.functions.datetime.ExprDateTimeNameSpace.convert_time_zone)
- [cos() (Expr method)](/versions/0.9.1/api/tableframe#tabsdata.Expr.cos)
- [cosh() (Expr method)](/versions/0.9.1/api/tableframe#tabsdata.Expr.cosh)
- [cot() (Expr method)](/versions/0.9.1/api/tableframe#tabsdata.Expr.cot)
- [count() (Expr method)](/versions/0.9.1/api/tableframe#tabsdata.Expr.count)
  - [(TableFrameGroupBy method)](/versions/0.9.1/api/tableframe#tabsdata.tableframe.lazyframe.group_by.TableFrameGroupBy.count)
- [count_matches() (ExprStringNameSpace method)](/versions/0.9.1/api/tableframe#tabsdata.tableframe.expr.string.ExprStringNameSpace.count_matches)
- [credentials (AzureDestination attribute)](/versions/0.9.1/api/connectors-list#tabsdata.tabsdatafunction.AzureDestination.credentials)
  - [(AzureDestination property)](/versions/0.9.1/api/connectors-list#id30)
  - [(AzureSource attribute)](/versions/0.9.1/api/connectors-list#tabsdata.tabsdatafunction.AzureSource.credentials)
  - [(AzureSource property)](/versions/0.9.1/api/connectors-list#id7)
  - [(MariaDBDestination attribute)](/versions/0.9.1/api/connectors-list#tabsdata.tabsdatafunction.MariaDBDestination.credentials)
  - [(MariaDBDestination property)](/versions/0.9.1/api/connectors-list#id37)
  - [(MariaDBSource attribute)](/versions/0.9.1/api/connectors-list#tabsdata.tabsdatafunction.MariaDBSource.credentials)
  - [(MariaDBSource property)](/versions/0.9.1/api/connectors-list#id15)
  - [(MySQLDestination attribute)](/versions/0.9.1/api/connectors-list#tabsdata.tabsdatafunction.MySQLDestination.credentials)
  - [(MySQLDestination property)](/versions/0.9.1/api/connectors-list#id33)
  - [(MySQLSource attribute)](/versions/0.9.1/api/connectors-list#tabsdata.tabsdatafunction.MySQLSource.credentials)
  - [(MySQLSource property)](/versions/0.9.1/api/connectors-list#id11)
  - [(OracleDestination attribute)](/versions/0.9.1/api/connectors-list#tabsdata.tabsdatafunction.OracleDestination.credentials)
  - [(OracleDestination property)](/versions/0.9.1/api/connectors-list#id45)
  - [(OracleSource attribute)](/versions/0.9.1/api/connectors-list#tabsdata.tabsdatafunction.OracleSource.credentials)
  - [(OracleSource property)](/versions/0.9.1/api/connectors-list#id23)
  - [(PostgresDestination attribute)](/versions/0.9.1/api/connectors-list#tabsdata.tabsdatafunction.PostgresDestination.credentials)
  - [(PostgresDestination property)](/versions/0.9.1/api/connectors-list#id41)
  - [(PostgresSource attribute)](/versions/0.9.1/api/connectors-list#tabsdata.tabsdatafunction.PostgresSource.credentials)
  - [(PostgresSource property)](/versions/0.9.1/api/connectors-list#id19)
  - [(S3Destination attribute)](/versions/0.9.1/api/connectors-list#tabsdata.tabsdatafunction.S3Destination.credentials)
  - [(S3Destination property)](/versions/0.9.1/api/connectors-list#id27)
  - [(S3Source attribute)](/versions/0.9.1/api/connectors-list#tabsdata.tabsdatafunction.S3Source.credentials)
  - [(S3Source property)](/versions/0.9.1/api/connectors-list#id3)
- [CSVFormat (class in tabsdata.format)](/versions/0.9.1/api/fileformats#tabsdata.format.CSVFormat)

## D

- [date() (ExprDateTimeNameSpace method)](/versions/0.9.1/api/tableframe#tabsdata.tableframe.functions.datetime.ExprDateTimeNameSpace.date)
- [datetime() (ExprDateTimeNameSpace method)](/versions/0.9.1/api/tableframe#tabsdata.tableframe.functions.datetime.ExprDateTimeNameSpace.datetime)
- [day() (ExprDateTimeNameSpace method)](/versions/0.9.1/api/tableframe#tabsdata.tableframe.functions.datetime.ExprDateTimeNameSpace.day)
- [degrees() (Expr method)](/versions/0.9.1/api/tableframe#tabsdata.Expr.degrees)
- [destination_table (MariaDBDestination attribute)](/versions/0.9.1/api/connectors-list#tabsdata.tabsdatafunction.MariaDBDestination.destination_table)
  - [(MariaDBDestination property)](/versions/0.9.1/api/connectors-list#id38)
  - [(MySQLDestination attribute)](/versions/0.9.1/api/connectors-list#tabsdata.tabsdatafunction.MySQLDestination.destination_table)
  - [(MySQLDestination property)](/versions/0.9.1/api/connectors-list#id34)
  - [(OracleDestination attribute)](/versions/0.9.1/api/connectors-list#tabsdata.tabsdatafunction.OracleDestination.destination_table)
  - [(OracleDestination property)](/versions/0.9.1/api/connectors-list#id46)
  - [(PostgresDestination attribute)](/versions/0.9.1/api/connectors-list#tabsdata.tabsdatafunction.PostgresDestination.destination_table)
  - [(PostgresDestination property)](/versions/0.9.1/api/connectors-list#id42)
- [DestinationPlugin (class in tabsdata.tabsdatafunction)](/versions/0.9.1/api/connectors-list#tabsdata.tabsdatafunction.DestinationPlugin)
- [diff() (Expr method)](/versions/0.9.1/api/tableframe#tabsdata.Expr.diff)
- [DirectSecret (class in tabsdata.secret)](/versions/0.9.1/api/credentials#tabsdata.secret.DirectSecret)
- [drop() (TableFrame method)](/versions/0.9.1/api/tableframe#tabsdata.TableFrame.drop)
- [drop_nans() (TableFrame method)](/versions/0.9.1/api/tableframe#tabsdata.TableFrame.drop_nans)
- [drop_nulls() (TableFrame method)](/versions/0.9.1/api/tableframe#tabsdata.TableFrame.drop_nulls)
- [dst_offset() (ExprDateTimeNameSpace method)](/versions/0.9.1/api/tableframe#tabsdata.tableframe.functions.datetime.ExprDateTimeNameSpace.dst_offset)
- [dt (Expr property)](/versions/0.9.1/api/tableframe#tabsdata.Expr.dt)
- [dtypes (TableFrame property)](/versions/0.9.1/api/tableframe#tabsdata.TableFrame.dtypes)

## E

- [empty() (TableFrame class method)](/versions/0.9.1/api/tableframe#tabsdata.TableFrame.empty)
- [ends_with() (ExprStringNameSpace method)](/versions/0.9.1/api/tableframe#tabsdata.tableframe.expr.string.ExprStringNameSpace.ends_with)
- [environment_variable_name (EnvironmentSecret attribute)](/versions/0.9.1/api/credentials#tabsdata.secret.EnvironmentSecret.environment_variable_name)
- [EnvironmentSecret (class in tabsdata.secret)](/versions/0.9.1/api/credentials#tabsdata.secret.EnvironmentSecret)
- [eol_char (CSVFormat attribute)](/versions/0.9.1/api/fileformats#tabsdata.format.CSVFormat.eol_char)
- [epoch() (ExprDateTimeNameSpace method)](/versions/0.9.1/api/tableframe#tabsdata.tableframe.functions.datetime.ExprDateTimeNameSpace.epoch)
- [eq() (Expr method)](/versions/0.9.1/api/tableframe#tabsdata.Expr.eq)
- [eq_missing() (Expr method)](/versions/0.9.1/api/tableframe#tabsdata.Expr.eq_missing)
- [exp() (Expr method)](/versions/0.9.1/api/tableframe#tabsdata.Expr.exp)
- [explain() (TableFrame method)](/versions/0.9.1/api/tableframe#tabsdata.TableFrame.explain)
- [Expr (class in tabsdata)](/versions/0.9.1/api/tableframe#tabsdata.Expr)
- [ExprDateTimeNameSpace (class in tabsdata.tableframe.functions.datetime)](/versions/0.9.1/api/tableframe#tabsdata.tableframe.functions.datetime.ExprDateTimeNameSpace)
- [ExprStringNameSpace (class in tabsdata.tableframe.expr.string)](/versions/0.9.1/api/tableframe#tabsdata.tableframe.expr.string.ExprStringNameSpace)
- [extract() (ExprStringNameSpace method)](/versions/0.9.1/api/tableframe#tabsdata.tableframe.expr.string.ExprStringNameSpace.extract)

## F

- [FileFormat (class in tabsdata.format)](/versions/0.9.1/api/fileformats#tabsdata.format.FileFormat)
- [fill_nan() (Expr method)](/versions/0.9.1/api/tableframe#tabsdata.Expr.fill_nan)
  - [(TableFrame method)](/versions/0.9.1/api/tableframe#tabsdata.TableFrame.fill_nan)
- [fill_null() (Expr method)](/versions/0.9.1/api/tableframe#tabsdata.Expr.fill_null)
  - [(TableFrame method)](/versions/0.9.1/api/tableframe#tabsdata.TableFrame.fill_null)
- [filter() (Expr method)](/versions/0.9.1/api/tableframe#tabsdata.Expr.filter)
  - [(TableFrame method)](/versions/0.9.1/api/tableframe#tabsdata.TableFrame.filter)
- [find() (ExprStringNameSpace method)](/versions/0.9.1/api/tableframe#tabsdata.tableframe.expr.string.ExprStringNameSpace.find)
- [first() (Expr method)](/versions/0.9.1/api/tableframe#tabsdata.Expr.first)
  - [(TableFrame method)](/versions/0.9.1/api/tableframe#tabsdata.TableFrame.first)
- [floor() (Expr method)](/versions/0.9.1/api/tableframe#tabsdata.Expr.floor)
- [floordiv() (Expr method)](/versions/0.9.1/api/tableframe#tabsdata.Expr.floordiv)
- [format (AzureDestination attribute)](/versions/0.9.1/api/connectors-list#tabsdata.tabsdatafunction.AzureDestination.format)
  - [(AzureDestination property)](/versions/0.9.1/api/connectors-list#id31)
  - [(AzureSource attribute)](/versions/0.9.1/api/connectors-list#tabsdata.tabsdatafunction.AzureSource.format)
  - [(AzureSource property)](/versions/0.9.1/api/connectors-list#id8)
  - [(LocalFileDestination property)](/versions/0.9.1/api/connectors-list#tabsdata.tabsdatafunction.LocalFileDestination.format)
  - [(LocalFileSource attribute)](/versions/0.9.1/api/connectors-list#tabsdata.tabsdatafunction.LocalFileSource.format)
  - [(LocalFileSource property)](/versions/0.9.1/api/connectors-list#id0)
  - [(S3Destination attribute)](/versions/0.9.1/api/connectors-list#tabsdata.tabsdatafunction.S3Destination.format)
  - [(S3Destination property)](/versions/0.9.1/api/connectors-list#id28)
  - [(S3Source attribute)](/versions/0.9.1/api/connectors-list#tabsdata.tabsdatafunction.S3Source.format)
  - [(S3Source property)](/versions/0.9.1/api/connectors-list#id4)

## G

- [ge() (Expr method)](/versions/0.9.1/api/tableframe#tabsdata.Expr.ge)
- get_class_methods() (in module tabsdata.tableframe.lazyframe.frame)
- get_missing_methods() (in module tabsdata.tableframe.lazyframe.frame)
- [group_by() (TableFrame method)](/versions/0.9.1/api/tableframe#tabsdata.TableFrame.group_by)
- [gt() (Expr method)](/versions/0.9.1/api/tableframe#tabsdata.Expr.gt)

## H

- [hash() (Expr method)](/versions/0.9.1/api/tableframe#tabsdata.Expr.hash)
- [head() (ExprStringNameSpace method)](/versions/0.9.1/api/tableframe#tabsdata.tableframe.expr.string.ExprStringNameSpace.head)
  - [(TableFrame method)](/versions/0.9.1/api/tableframe#tabsdata.TableFrame.head)
- [hour() (ExprDateTimeNameSpace method)](/versions/0.9.1/api/tableframe#tabsdata.tableframe.functions.datetime.ExprDateTimeNameSpace.hour)

## I

- [if_table_exists (MariaDBDestination attribute)](/versions/0.9.1/api/connectors-list#tabsdata.tabsdatafunction.MariaDBDestination.if_table_exists)
  - [(MariaDBDestination property)](/versions/0.9.1/api/connectors-list#id39)
  - [(MySQLDestination attribute)](/versions/0.9.1/api/connectors-list#tabsdata.tabsdatafunction.MySQLDestination.if_table_exists)
  - [(MySQLDestination property)](/versions/0.9.1/api/connectors-list#id35)
  - [(OracleDestination attribute)](/versions/0.9.1/api/connectors-list#tabsdata.tabsdatafunction.OracleDestination.if_table_exists)
  - [(OracleDestination property)](/versions/0.9.1/api/connectors-list#id47)
  - [(PostgresDestination attribute)](/versions/0.9.1/api/connectors-list#tabsdata.tabsdatafunction.PostgresDestination.if_table_exists)
  - [(PostgresDestination property)](/versions/0.9.1/api/connectors-list#id43)
- [initial_last_modified (AzureSource attribute)](/versions/0.9.1/api/connectors-list#tabsdata.tabsdatafunction.AzureSource.initial_last_modified)
  - [(AzureSource property)](/versions/0.9.1/api/connectors-list#id9)
  - [(LocalFileSource attribute)](/versions/0.9.1/api/connectors-list#tabsdata.tabsdatafunction.LocalFileSource.initial_last_modified)
  - [(LocalFileSource property)](/versions/0.9.1/api/connectors-list#id1)
  - [(S3Source attribute)](/versions/0.9.1/api/connectors-list#tabsdata.tabsdatafunction.S3Source.initial_last_modified)
  - [(S3Source property)](/versions/0.9.1/api/connectors-list#id5)
- [initial_values (MariaDBSource attribute)](/versions/0.9.1/api/connectors-list#tabsdata.tabsdatafunction.MariaDBSource.initial_values)
  - [(MariaDBSource property)](/versions/0.9.1/api/connectors-list#id16)
  - [(MySQLSource attribute)](/versions/0.9.1/api/connectors-list#tabsdata.tabsdatafunction.MySQLSource.initial_values)
  - [(MySQLSource property)](/versions/0.9.1/api/connectors-list#id12)
  - [(OracleSource attribute)](/versions/0.9.1/api/connectors-list#tabsdata.tabsdatafunction.OracleSource.initial_values)
  - [(OracleSource property)](/versions/0.9.1/api/connectors-list#id24)
  - [(PostgresSource attribute)](/versions/0.9.1/api/connectors-list#tabsdata.tabsdatafunction.PostgresSource.initial_values)
  - [(PostgresSource property)](/versions/0.9.1/api/connectors-list#id20)
  - [(SourcePlugin property)](/versions/0.9.1/api/connectors-list#tabsdata.tabsdatafunction.SourcePlugin.initial_values)
- [input_comment_prefix (CSVFormat attribute)](/versions/0.9.1/api/fileformats#tabsdata.format.CSVFormat.input_comment_prefix)
- [input_decimal_comma (CSVFormat attribute)](/versions/0.9.1/api/fileformats#tabsdata.format.CSVFormat.input_decimal_comma)
- [input_encoding (CSVFormat attribute)](/versions/0.9.1/api/fileformats#tabsdata.format.CSVFormat.input_encoding)
- [input_has_header (CSVFormat attribute)](/versions/0.9.1/api/fileformats#tabsdata.format.CSVFormat.input_has_header)
- [input_ignore_errors (CSVFormat attribute)](/versions/0.9.1/api/fileformats#tabsdata.format.CSVFormat.input_ignore_errors)
- [input_missing_is_null (CSVFormat attribute)](/versions/0.9.1/api/fileformats#tabsdata.format.CSVFormat.input_missing_is_null)
- [input_null_values (CSVFormat attribute)](/versions/0.9.1/api/fileformats#tabsdata.format.CSVFormat.input_null_values)
- [input_raise_if_empty (CSVFormat attribute)](/versions/0.9.1/api/fileformats#tabsdata.format.CSVFormat.input_raise_if_empty)
- [input_skip_rows (CSVFormat attribute)](/versions/0.9.1/api/fileformats#tabsdata.format.CSVFormat.input_skip_rows)
- [input_skip_rows_after_header (CSVFormat attribute)](/versions/0.9.1/api/fileformats#tabsdata.format.CSVFormat.input_skip_rows_after_header)
- [input_truncate_ragged_lines (CSVFormat attribute)](/versions/0.9.1/api/fileformats#tabsdata.format.CSVFormat.input_truncate_ragged_lines)
- [input_try_parse_dates (CSVFormat attribute)](/versions/0.9.1/api/fileformats#tabsdata.format.CSVFormat.input_try_parse_dates)
- [inspect() (TableFrame method)](/versions/0.9.1/api/tableframe#tabsdata.TableFrame.inspect)
- [is_between() (Expr method)](/versions/0.9.1/api/tableframe#tabsdata.Expr.is_between)
- [is_finite() (Expr method)](/versions/0.9.1/api/tableframe#tabsdata.Expr.is_finite)
- [is_in() (Expr method)](/versions/0.9.1/api/tableframe#tabsdata.Expr.is_in)
- [is_infinite() (Expr method)](/versions/0.9.1/api/tableframe#tabsdata.Expr.is_infinite)
- [is_leap_year() (ExprDateTimeNameSpace method)](/versions/0.9.1/api/tableframe#tabsdata.tableframe.functions.datetime.ExprDateTimeNameSpace.is_leap_year)
- [is_nan() (Expr method)](/versions/0.9.1/api/tableframe#tabsdata.Expr.is_nan)
- [is_not_nan() (Expr method)](/versions/0.9.1/api/tableframe#tabsdata.Expr.is_not_nan)
- [is_not_null() (Expr method)](/versions/0.9.1/api/tableframe#tabsdata.Expr.is_not_null)
- [is_null() (Expr method)](/versions/0.9.1/api/tableframe#tabsdata.Expr.is_null)
- [is_unique() (Expr method)](/versions/0.9.1/api/tableframe#tabsdata.Expr.is_unique)
- [iso_year() (ExprDateTimeNameSpace method)](/versions/0.9.1/api/tableframe#tabsdata.tableframe.functions.datetime.ExprDateTimeNameSpace.iso_year)
- [item() (TableFrame method)](/versions/0.9.1/api/tableframe#tabsdata.TableFrame.item)

## J

- [join() (TableFrame method)](/versions/0.9.1/api/tableframe#tabsdata.TableFrame.join)

## L

- [last() (Expr method)](/versions/0.9.1/api/tableframe#tabsdata.Expr.last)
  - [(TableFrame method)](/versions/0.9.1/api/tableframe#tabsdata.TableFrame.last)
- [le() (Expr method)](/versions/0.9.1/api/tableframe#tabsdata.Expr.le)
- [len() (Expr method)](/versions/0.9.1/api/tableframe#tabsdata.Expr.len)
  - [(TableFrameGroupBy method)](/versions/0.9.1/api/tableframe#tabsdata.tableframe.lazyframe.group_by.TableFrameGroupBy.len)
- [len_bytes() (ExprStringNameSpace method)](/versions/0.9.1/api/tableframe#tabsdata.tableframe.expr.string.ExprStringNameSpace.len_bytes)
- [len_chars() (ExprStringNameSpace method)](/versions/0.9.1/api/tableframe#tabsdata.tableframe.expr.string.ExprStringNameSpace.len_chars)
- [limit() (TableFrame method)](/versions/0.9.1/api/tableframe#tabsdata.TableFrame.limit)
- lit() (in module tabsdata)
  - (in module tabsdata.tableframe.functions.lit)
- [LocalFileDestination (class in tabsdata.tabsdatafunction)](/versions/0.9.1/api/connectors-list#tabsdata.tabsdatafunction.LocalFileDestination)
- [LocalFileSource (class in tabsdata.tabsdatafunction)](/versions/0.9.1/api/connectors-list#tabsdata.tabsdatafunction.LocalFileSource)
- [log() (Expr method)](/versions/0.9.1/api/tableframe#tabsdata.Expr.log)
- [log10() (Expr method)](/versions/0.9.1/api/tableframe#tabsdata.Expr.log10)
- [log1p() (Expr method)](/versions/0.9.1/api/tableframe#tabsdata.Expr.log1p)
- [LogFormat (class in tabsdata.format)](/versions/0.9.1/api/fileformats#tabsdata.format.LogFormat)
- [lt() (Expr method)](/versions/0.9.1/api/tableframe#tabsdata.Expr.lt)

## M

- [MariaDBDestination (class in tabsdata.tabsdatafunction)](/versions/0.9.1/api/connectors-list#tabsdata.tabsdatafunction.MariaDBDestination)
- [MariaDBSource (class in tabsdata.tabsdatafunction)](/versions/0.9.1/api/connectors-list#tabsdata.tabsdatafunction.MariaDBSource)
- [max() (Expr method)](/versions/0.9.1/api/tableframe#tabsdata.Expr.max)
  - [(TableFrameGroupBy method)](/versions/0.9.1/api/tableframe#tabsdata.tableframe.lazyframe.group_by.TableFrameGroupBy.max)
- [mean() (Expr method)](/versions/0.9.1/api/tableframe#tabsdata.Expr.mean)
  - [(TableFrameGroupBy method)](/versions/0.9.1/api/tableframe#tabsdata.tableframe.lazyframe.group_by.TableFrameGroupBy.mean)
- [median() (Expr method)](/versions/0.9.1/api/tableframe#tabsdata.Expr.median)
  - [(TableFrameGroupBy method)](/versions/0.9.1/api/tableframe#tabsdata.tableframe.lazyframe.group_by.TableFrameGroupBy.median)
- [microsecond() (ExprDateTimeNameSpace method)](/versions/0.9.1/api/tableframe#tabsdata.tableframe.functions.datetime.ExprDateTimeNameSpace.microsecond)
- [millennium() (ExprDateTimeNameSpace method)](/versions/0.9.1/api/tableframe#tabsdata.tableframe.functions.datetime.ExprDateTimeNameSpace.millennium)
- [millisecond() (ExprDateTimeNameSpace method)](/versions/0.9.1/api/tableframe#tabsdata.tableframe.functions.datetime.ExprDateTimeNameSpace.millisecond)
- [min() (Expr method)](/versions/0.9.1/api/tableframe#tabsdata.Expr.min)
  - [(TableFrameGroupBy method)](/versions/0.9.1/api/tableframe#tabsdata.tableframe.lazyframe.group_by.TableFrameGroupBy.min)
- [minute() (ExprDateTimeNameSpace method)](/versions/0.9.1/api/tableframe#tabsdata.tableframe.functions.datetime.ExprDateTimeNameSpace.minute)
- [mod() (Expr method)](/versions/0.9.1/api/tableframe#tabsdata.Expr.mod)
- tabsdata.tableframe.expr.expr
  - tabsdata.tableframe.expr.expr
  - tabsdata.tableframe.expr.string
  - tabsdata.tableframe.functions.col
  - tabsdata.tableframe.functions.datetime
  - tabsdata.tableframe.functions.eager
  - tabsdata.tableframe.functions.lit
  - tabsdata.tableframe.lazyframe.frame
  - tabsdata.tableframe.lazyframe.group_by
  - tabsdata.utils.tableframe
- [month() (ExprDateTimeNameSpace method)](/versions/0.9.1/api/tableframe#tabsdata.tableframe.functions.datetime.ExprDateTimeNameSpace.month)
- [month_end() (ExprDateTimeNameSpace method)](/versions/0.9.1/api/tableframe#tabsdata.tableframe.functions.datetime.ExprDateTimeNameSpace.month_end)
- [month_start() (ExprDateTimeNameSpace method)](/versions/0.9.1/api/tableframe#tabsdata.tableframe.functions.datetime.ExprDateTimeNameSpace.month_start)
- [mul() (Expr method)](/versions/0.9.1/api/tableframe#tabsdata.Expr.mul)
- [MySQLDestination (class in tabsdata.tabsdatafunction)](/versions/0.9.1/api/connectors-list#tabsdata.tabsdatafunction.MySQLDestination)
- [MySQLSource (class in tabsdata.tabsdatafunction)](/versions/0.9.1/api/connectors-list#tabsdata.tabsdatafunction.MySQLSource)

## N

- [n_unique() (Expr method)](/versions/0.9.1/api/tableframe#tabsdata.Expr.n_unique)
  - [(TableFrameGroupBy method)](/versions/0.9.1/api/tableframe#tabsdata.tableframe.lazyframe.group_by.TableFrameGroupBy.n_unique)
- [nanosecond() (ExprDateTimeNameSpace method)](/versions/0.9.1/api/tableframe#tabsdata.tableframe.functions.datetime.ExprDateTimeNameSpace.nanosecond)
- [NDJSONFormat (class in tabsdata.format)](/versions/0.9.1/api/fileformats#tabsdata.format.NDJSONFormat)
- [ne() (Expr method)](/versions/0.9.1/api/tableframe#tabsdata.Expr.ne)
- [ne_missing() (Expr method)](/versions/0.9.1/api/tableframe#tabsdata.Expr.ne_missing)
- [neg() (Expr method)](/versions/0.9.1/api/tableframe#tabsdata.Expr.neg)
- [not_() (Expr method)](/versions/0.9.1/api/tableframe#tabsdata.Expr.not_)

## O

- [offset_by() (ExprDateTimeNameSpace method)](/versions/0.9.1/api/tableframe#tabsdata.tableframe.functions.datetime.ExprDateTimeNameSpace.offset_by)
- [or_() (Expr method)](/versions/0.9.1/api/tableframe#tabsdata.Expr.or_)
- [OracleDestination (class in tabsdata.tabsdatafunction)](/versions/0.9.1/api/connectors-list#tabsdata.tabsdatafunction.OracleDestination)
- [OracleSource (class in tabsdata.tabsdatafunction)](/versions/0.9.1/api/connectors-list#tabsdata.tabsdatafunction.OracleSource)
- [ordinal_day() (ExprDateTimeNameSpace method)](/versions/0.9.1/api/tableframe#tabsdata.tableframe.functions.datetime.ExprDateTimeNameSpace.ordinal_day)
- [output_date_format (CSVFormat attribute)](/versions/0.9.1/api/fileformats#tabsdata.format.CSVFormat.output_date_format)
- [output_datetime_format (CSVFormat attribute)](/versions/0.9.1/api/fileformats#tabsdata.format.CSVFormat.output_datetime_format)
- [output_float_precision (CSVFormat attribute)](/versions/0.9.1/api/fileformats#tabsdata.format.CSVFormat.output_float_precision)
- [output_float_scientific (CSVFormat attribute)](/versions/0.9.1/api/fileformats#tabsdata.format.CSVFormat.output_float_scientific)
- [output_include_header (CSVFormat attribute)](/versions/0.9.1/api/fileformats#tabsdata.format.CSVFormat.output_include_header)
- [output_maintain_order (CSVFormat attribute)](/versions/0.9.1/api/fileformats#tabsdata.format.CSVFormat.output_maintain_order)
- [output_null_value (CSVFormat attribute)](/versions/0.9.1/api/fileformats#tabsdata.format.CSVFormat.output_null_value)
- [output_quote_style (CSVFormat attribute)](/versions/0.9.1/api/fileformats#tabsdata.format.CSVFormat.output_quote_style)
- [output_time_format (CSVFormat attribute)](/versions/0.9.1/api/fileformats#tabsdata.format.CSVFormat.output_time_format)

## P

- [pad_end() (ExprStringNameSpace method)](/versions/0.9.1/api/tableframe#tabsdata.tableframe.expr.string.ExprStringNameSpace.pad_end)
- [pad_start() (ExprStringNameSpace method)](/versions/0.9.1/api/tableframe#tabsdata.tableframe.expr.string.ExprStringNameSpace.pad_start)
- [ParquetFormat (class in tabsdata.format)](/versions/0.9.1/api/fileformats#tabsdata.format.ParquetFormat)
- [password (UserPasswordCredentials attribute)](/versions/0.9.1/api/credentials#tabsdata.credentials.UserPasswordCredentials.password)
  - [(UserPasswordCredentials property)](/versions/0.9.1/api/credentials#id0)
- [path (LocalFileDestination property)](/versions/0.9.1/api/connectors-list#tabsdata.tabsdatafunction.LocalFileDestination.path)
  - [(LocalFileSource attribute)](/versions/0.9.1/api/connectors-list#tabsdata.tabsdatafunction.LocalFileSource.path)
  - [(LocalFileSource property)](/versions/0.9.1/api/connectors-list#id2)
- [PostgresDestination (class in tabsdata.tabsdatafunction)](/versions/0.9.1/api/connectors-list#tabsdata.tabsdatafunction.PostgresDestination)
- [PostgresSource (class in tabsdata.tabsdatafunction)](/versions/0.9.1/api/connectors-list#tabsdata.tabsdatafunction.PostgresSource)
- [pow() (Expr method)](/versions/0.9.1/api/tableframe#tabsdata.Expr.pow)
- [publisher() (in module tabsdata.decorators)](/versions/0.9.1/api/decorators#tabsdata.decorators.publisher)

## Q

- [quarter() (ExprDateTimeNameSpace method)](/versions/0.9.1/api/tableframe#tabsdata.tableframe.functions.datetime.ExprDateTimeNameSpace.quarter)
- [query (MariaDBSource attribute)](/versions/0.9.1/api/connectors-list#tabsdata.tabsdatafunction.MariaDBSource.query)
  - [(MariaDBSource property)](/versions/0.9.1/api/connectors-list#id17)
  - [(MySQLSource attribute)](/versions/0.9.1/api/connectors-list#tabsdata.tabsdatafunction.MySQLSource.query)
  - [(MySQLSource property)](/versions/0.9.1/api/connectors-list#id13)
  - [(OracleSource attribute)](/versions/0.9.1/api/connectors-list#tabsdata.tabsdatafunction.OracleSource.query)
  - [(OracleSource property)](/versions/0.9.1/api/connectors-list#id25)
  - [(PostgresSource attribute)](/versions/0.9.1/api/connectors-list#tabsdata.tabsdatafunction.PostgresSource.query)
  - [(PostgresSource property)](/versions/0.9.1/api/connectors-list#id21)
- [quote_char (CSVFormat attribute)](/versions/0.9.1/api/fileformats#tabsdata.format.CSVFormat.quote_char)

## R

- [radians() (Expr method)](/versions/0.9.1/api/tableframe#tabsdata.Expr.radians)
- [rank() (Expr method)](/versions/0.9.1/api/tableframe#tabsdata.Expr.rank)
- [region (S3Destination property)](/versions/0.9.1/api/connectors-list#tabsdata.tabsdatafunction.S3Destination.region)
  - [(S3Source property)](/versions/0.9.1/api/connectors-list#tabsdata.tabsdatafunction.S3Source.region)
- [reinterpret() (Expr method)](/versions/0.9.1/api/tableframe#tabsdata.Expr.reinterpret)
- [replace() (ExprDateTimeNameSpace method)](/versions/0.9.1/api/tableframe#tabsdata.tableframe.functions.datetime.ExprDateTimeNameSpace.replace)
  - [(ExprStringNameSpace method)](/versions/0.9.1/api/tableframe#tabsdata.tableframe.expr.string.ExprStringNameSpace.replace)
- [replace_all() (ExprStringNameSpace method)](/versions/0.9.1/api/tableframe#tabsdata.tableframe.expr.string.ExprStringNameSpace.replace_all)
- [replace_many() (ExprStringNameSpace method)](/versions/0.9.1/api/tableframe#tabsdata.tableframe.expr.string.ExprStringNameSpace.replace_many)
- [replace_time_zone() (ExprDateTimeNameSpace method)](/versions/0.9.1/api/tableframe#tabsdata.tableframe.functions.datetime.ExprDateTimeNameSpace.replace_time_zone)
- [reverse() (ExprStringNameSpace method)](/versions/0.9.1/api/tableframe#tabsdata.tableframe.expr.string.ExprStringNameSpace.reverse)
- [round() (Expr method)](/versions/0.9.1/api/tableframe#tabsdata.Expr.round)
- [round_sig_figs() (Expr method)](/versions/0.9.1/api/tableframe#tabsdata.Expr.round_sig_figs)

## S

- [S3AccessKeyCredentials (class in tabsdata.credentials)](/versions/0.9.1/api/credentials#tabsdata.credentials.S3AccessKeyCredentials)
- [S3Destination (class in tabsdata.tabsdatafunction)](/versions/0.9.1/api/connectors-list#tabsdata.tabsdatafunction.S3Destination)
- [S3Source (class in tabsdata.tabsdatafunction)](/versions/0.9.1/api/connectors-list#tabsdata.tabsdatafunction.S3Source)
- [schema (TableFrame property)](/versions/0.9.1/api/tableframe#tabsdata.TableFrame.schema)
- [second() (ExprDateTimeNameSpace method)](/versions/0.9.1/api/tableframe#tabsdata.tableframe.functions.datetime.ExprDateTimeNameSpace.second)
- [Secret (class in tabsdata.secret)](/versions/0.9.1/api/credentials#tabsdata.secret.Secret)
- [secret_direct_value (DirectSecret attribute)](/versions/0.9.1/api/credentials#tabsdata.secret.DirectSecret.secret_direct_value)
- [secret_value (DirectSecret property)](/versions/0.9.1/api/credentials#id6)
  - [(EnvironmentSecret property)](/versions/0.9.1/api/credentials#id7)
- [secret_value() (DirectSecret method)](/versions/0.9.1/api/credentials#tabsdata.secret.DirectSecret.secret_value)
  - [(EnvironmentSecret method)](/versions/0.9.1/api/credentials#tabsdata.secret.EnvironmentSecret.secret_value)
- [select() (TableFrame method)](/versions/0.9.1/api/tableframe#tabsdata.TableFrame.select)
- [separator (CSVFormat attribute)](/versions/0.9.1/api/fileformats#tabsdata.format.CSVFormat.separator)
- [show_graph() (TableFrame method)](/versions/0.9.1/api/tableframe#tabsdata.TableFrame.show_graph)
- [shrink_dtype() (Expr method)](/versions/0.9.1/api/tableframe#tabsdata.Expr.shrink_dtype)
- [sign() (Expr method)](/versions/0.9.1/api/tableframe#tabsdata.Expr.sign)
- [sin() (Expr method)](/versions/0.9.1/api/tableframe#tabsdata.Expr.sin)
- [sinh() (Expr method)](/versions/0.9.1/api/tableframe#tabsdata.Expr.sinh)
- [slice() (Expr method)](/versions/0.9.1/api/tableframe#tabsdata.Expr.slice)
  - [(ExprStringNameSpace method)](/versions/0.9.1/api/tableframe#tabsdata.tableframe.expr.string.ExprStringNameSpace.slice)
  - [(TableFrame method)](/versions/0.9.1/api/tableframe#tabsdata.TableFrame.slice)
- [sort() (TableFrame method)](/versions/0.9.1/api/tableframe#tabsdata.TableFrame.sort)
- [SourcePlugin (class in tabsdata.tabsdatafunction)](/versions/0.9.1/api/connectors-list#tabsdata.tabsdatafunction.SourcePlugin)
- [sqrt() (Expr method)](/versions/0.9.1/api/tableframe#tabsdata.Expr.sqrt)
- [starts_with() (ExprStringNameSpace method)](/versions/0.9.1/api/tableframe#tabsdata.tableframe.expr.string.ExprStringNameSpace.starts_with)
- [str (Expr property)](/versions/0.9.1/api/tableframe#tabsdata.Expr.str)
- [strftime() (ExprDateTimeNameSpace method)](/versions/0.9.1/api/tableframe#tabsdata.tableframe.functions.datetime.ExprDateTimeNameSpace.strftime)
- [strip_chars() (ExprStringNameSpace method)](/versions/0.9.1/api/tableframe#tabsdata.tableframe.expr.string.ExprStringNameSpace.strip_chars)
- [strip_chars_end() (ExprStringNameSpace method)](/versions/0.9.1/api/tableframe#tabsdata.tableframe.expr.string.ExprStringNameSpace.strip_chars_end)
- [strip_chars_start() (ExprStringNameSpace method)](/versions/0.9.1/api/tableframe#tabsdata.tableframe.expr.string.ExprStringNameSpace.strip_chars_start)
- [strip_prefix() (ExprStringNameSpace method)](/versions/0.9.1/api/tableframe#tabsdata.tableframe.expr.string.ExprStringNameSpace.strip_prefix)
- [strip_suffix() (ExprStringNameSpace method)](/versions/0.9.1/api/tableframe#tabsdata.tableframe.expr.string.ExprStringNameSpace.strip_suffix)
- [sub() (Expr method)](/versions/0.9.1/api/tableframe#tabsdata.Expr.sub)
- [subscriber() (in module tabsdata.decorators)](/versions/0.9.1/api/decorators#tabsdata.decorators.subscriber)
- [sum() (Expr method)](/versions/0.9.1/api/tableframe#tabsdata.Expr.sum)
  - [(TableFrameGroupBy method)](/versions/0.9.1/api/tableframe#tabsdata.tableframe.lazyframe.group_by.TableFrameGroupBy.sum)

## T

- [TableFrame (class in tabsdata)](/versions/0.9.1/api/tableframe#tabsdata.TableFrame)
- [TableFrameGroupBy (class in tabsdata.tableframe.lazyframe.group_by)](/versions/0.9.1/api/tableframe#tabsdata.tableframe.lazyframe.group_by.TableFrameGroupBy)
- module
  - module
- module
  - module
- module
  - module
- module
  - module
- module
  - module
- module
  - module
- module
  - module
- module
  - module
- module
  - module
- [tail() (ExprStringNameSpace method)](/versions/0.9.1/api/tableframe#tabsdata.tableframe.expr.string.ExprStringNameSpace.tail)
  - [(TableFrame method)](/versions/0.9.1/api/tableframe#tabsdata.TableFrame.tail)
- [tan() (Expr method)](/versions/0.9.1/api/tableframe#tabsdata.Expr.tan)
- [tanh() (Expr method)](/versions/0.9.1/api/tableframe#tabsdata.Expr.tanh)
- TdType (class in tabsdata.tableframe.lazyframe.frame)
- [time() (ExprDateTimeNameSpace method)](/versions/0.9.1/api/tableframe#tabsdata.tableframe.functions.datetime.ExprDateTimeNameSpace.time)
- [timestamp() (ExprDateTimeNameSpace method)](/versions/0.9.1/api/tableframe#tabsdata.tableframe.functions.datetime.ExprDateTimeNameSpace.timestamp)
- [to_date() (ExprStringNameSpace method)](/versions/0.9.1/api/tableframe#tabsdata.tableframe.expr.string.ExprStringNameSpace.to_date)
- [to_datetime() (ExprStringNameSpace method)](/versions/0.9.1/api/tableframe#tabsdata.tableframe.expr.string.ExprStringNameSpace.to_datetime)
- [to_dict() (AzureAccountKeyCredentials method)](/versions/0.9.1/api/credentials#tabsdata.credentials.AzureAccountKeyCredentials.to_dict)
  - [(AzureDestination method)](/versions/0.9.1/api/connectors-list#tabsdata.tabsdatafunction.AzureDestination.to_dict)
  - [(AzureSource method)](/versions/0.9.1/api/connectors-list#tabsdata.tabsdatafunction.AzureSource.to_dict)
  - [(DirectSecret method)](/versions/0.9.1/api/credentials#tabsdata.secret.DirectSecret.to_dict)
  - [(EnvironmentSecret method)](/versions/0.9.1/api/credentials#tabsdata.secret.EnvironmentSecret.to_dict)
  - [(LocalFileSource method)](/versions/0.9.1/api/connectors-list#tabsdata.tabsdatafunction.LocalFileSource.to_dict)
  - [(MariaDBDestination method)](/versions/0.9.1/api/connectors-list#tabsdata.tabsdatafunction.MariaDBDestination.to_dict)
  - [(MariaDBSource method)](/versions/0.9.1/api/connectors-list#tabsdata.tabsdatafunction.MariaDBSource.to_dict)
  - [(MySQLDestination method)](/versions/0.9.1/api/connectors-list#tabsdata.tabsdatafunction.MySQLDestination.to_dict)
  - [(MySQLSource method)](/versions/0.9.1/api/connectors-list#tabsdata.tabsdatafunction.MySQLSource.to_dict)
  - [(OracleDestination method)](/versions/0.9.1/api/connectors-list#tabsdata.tabsdatafunction.OracleDestination.to_dict)
  - [(OracleSource method)](/versions/0.9.1/api/connectors-list#tabsdata.tabsdatafunction.OracleSource.to_dict)
  - [(PostgresDestination method)](/versions/0.9.1/api/connectors-list#tabsdata.tabsdatafunction.PostgresDestination.to_dict)
  - [(PostgresSource method)](/versions/0.9.1/api/connectors-list#tabsdata.tabsdatafunction.PostgresSource.to_dict)
  - [(S3AccessKeyCredentials method)](/versions/0.9.1/api/credentials#tabsdata.credentials.S3AccessKeyCredentials.to_dict)
  - [(S3Destination method)](/versions/0.9.1/api/connectors-list#tabsdata.tabsdatafunction.S3Destination.to_dict)
  - [(S3Source method)](/versions/0.9.1/api/connectors-list#tabsdata.tabsdatafunction.S3Source.to_dict)
  - [(UserPasswordCredentials method)](/versions/0.9.1/api/credentials#tabsdata.credentials.UserPasswordCredentials.to_dict)
- [to_integer() (ExprStringNameSpace method)](/versions/0.9.1/api/tableframe#tabsdata.tableframe.expr.string.ExprStringNameSpace.to_integer)
- [to_lowercase() (ExprStringNameSpace method)](/versions/0.9.1/api/tableframe#tabsdata.tableframe.expr.string.ExprStringNameSpace.to_lowercase)
- [to_string() (ExprDateTimeNameSpace method)](/versions/0.9.1/api/tableframe#tabsdata.tableframe.functions.datetime.ExprDateTimeNameSpace.to_string)
- [to_time() (ExprStringNameSpace method)](/versions/0.9.1/api/tableframe#tabsdata.tableframe.expr.string.ExprStringNameSpace.to_time)
- [to_titlecase() (ExprStringNameSpace method)](/versions/0.9.1/api/tableframe#tabsdata.tableframe.expr.string.ExprStringNameSpace.to_titlecase)
- [to_uppercase() (ExprStringNameSpace method)](/versions/0.9.1/api/tableframe#tabsdata.tableframe.expr.string.ExprStringNameSpace.to_uppercase)
- [total_days() (ExprDateTimeNameSpace method)](/versions/0.9.1/api/tableframe#tabsdata.tableframe.functions.datetime.ExprDateTimeNameSpace.total_days)
- [total_hours() (ExprDateTimeNameSpace method)](/versions/0.9.1/api/tableframe#tabsdata.tableframe.functions.datetime.ExprDateTimeNameSpace.total_hours)
- [total_microseconds() (ExprDateTimeNameSpace method)](/versions/0.9.1/api/tableframe#tabsdata.tableframe.functions.datetime.ExprDateTimeNameSpace.total_microseconds)
- [total_milliseconds() (ExprDateTimeNameSpace method)](/versions/0.9.1/api/tableframe#tabsdata.tableframe.functions.datetime.ExprDateTimeNameSpace.total_milliseconds)
- [total_minutes() (ExprDateTimeNameSpace method)](/versions/0.9.1/api/tableframe#tabsdata.tableframe.functions.datetime.ExprDateTimeNameSpace.total_minutes)
- [total_nanoseconds() (ExprDateTimeNameSpace method)](/versions/0.9.1/api/tableframe#tabsdata.tableframe.functions.datetime.ExprDateTimeNameSpace.total_nanoseconds)
- [total_seconds() (ExprDateTimeNameSpace method)](/versions/0.9.1/api/tableframe#tabsdata.tableframe.functions.datetime.ExprDateTimeNameSpace.total_seconds)
- [transformer() (in module tabsdata.decorators)](/versions/0.9.1/api/decorators#tabsdata.decorators.transformer)
- [trigger_input() (SourcePlugin method)](/versions/0.9.1/api/connectors-list#tabsdata.tabsdatafunction.SourcePlugin.trigger_input)
- [trigger_output() (DestinationPlugin method)](/versions/0.9.1/api/connectors-list#id49)
- [truediv() (Expr method)](/versions/0.9.1/api/tableframe#tabsdata.Expr.truediv)
- [truncate() (ExprDateTimeNameSpace method)](/versions/0.9.1/api/tableframe#tabsdata.tableframe.functions.datetime.ExprDateTimeNameSpace.truncate)

## U

- [unique() (TableFrame method)](/versions/0.9.1/api/tableframe#tabsdata.TableFrame.unique)
- [uri (AzureDestination attribute)](/versions/0.9.1/api/connectors-list#tabsdata.tabsdatafunction.AzureDestination.uri)
  - [(AzureDestination property)](/versions/0.9.1/api/connectors-list#id32)
  - [(AzureSource attribute)](/versions/0.9.1/api/connectors-list#tabsdata.tabsdatafunction.AzureSource.uri)
  - [(AzureSource property)](/versions/0.9.1/api/connectors-list#id10)
  - [(MariaDBDestination attribute)](/versions/0.9.1/api/connectors-list#tabsdata.tabsdatafunction.MariaDBDestination.uri)
  - [(MariaDBDestination property)](/versions/0.9.1/api/connectors-list#id40)
  - [(MariaDBSource attribute)](/versions/0.9.1/api/connectors-list#tabsdata.tabsdatafunction.MariaDBSource.uri)
  - [(MariaDBSource property)](/versions/0.9.1/api/connectors-list#id18)
  - [(MySQLDestination attribute)](/versions/0.9.1/api/connectors-list#tabsdata.tabsdatafunction.MySQLDestination.uri)
  - [(MySQLDestination property)](/versions/0.9.1/api/connectors-list#id36)
  - [(MySQLSource attribute)](/versions/0.9.1/api/connectors-list#tabsdata.tabsdatafunction.MySQLSource.uri)
  - [(MySQLSource property)](/versions/0.9.1/api/connectors-list#id14)
  - [(OracleDestination attribute)](/versions/0.9.1/api/connectors-list#tabsdata.tabsdatafunction.OracleDestination.uri)
  - [(OracleDestination property)](/versions/0.9.1/api/connectors-list#id48)
  - [(OracleSource attribute)](/versions/0.9.1/api/connectors-list#tabsdata.tabsdatafunction.OracleSource.uri)
  - [(OracleSource property)](/versions/0.9.1/api/connectors-list#id26)
  - [(PostgresDestination attribute)](/versions/0.9.1/api/connectors-list#tabsdata.tabsdatafunction.PostgresDestination.uri)
  - [(PostgresDestination property)](/versions/0.9.1/api/connectors-list#id44)
  - [(PostgresSource attribute)](/versions/0.9.1/api/connectors-list#tabsdata.tabsdatafunction.PostgresSource.uri)
  - [(PostgresSource property)](/versions/0.9.1/api/connectors-list#id22)
  - [(S3Destination attribute)](/versions/0.9.1/api/connectors-list#tabsdata.tabsdatafunction.S3Destination.uri)
  - [(S3Destination property)](/versions/0.9.1/api/connectors-list#id29)
  - [(S3Source attribute)](/versions/0.9.1/api/connectors-list#tabsdata.tabsdatafunction.S3Source.uri)
  - [(S3Source property)](/versions/0.9.1/api/connectors-list#id6)
- [user (UserPasswordCredentials attribute)](/versions/0.9.1/api/credentials#tabsdata.credentials.UserPasswordCredentials.user)
  - [(UserPasswordCredentials property)](/versions/0.9.1/api/credentials#id1)
- [UserPasswordCredentials (class in tabsdata.credentials)](/versions/0.9.1/api/credentials#tabsdata.credentials.UserPasswordCredentials)

## W

- [week() (ExprDateTimeNameSpace method)](/versions/0.9.1/api/tableframe#tabsdata.tableframe.functions.datetime.ExprDateTimeNameSpace.week)
- [weekday() (ExprDateTimeNameSpace method)](/versions/0.9.1/api/tableframe#tabsdata.tableframe.functions.datetime.ExprDateTimeNameSpace.weekday)
- [width (TableFrame property)](/versions/0.9.1/api/tableframe#tabsdata.TableFrame.width)
- [with_columns() (TableFrame method)](/versions/0.9.1/api/tableframe#tabsdata.TableFrame.with_columns)
- [with_time_unit() (ExprDateTimeNameSpace method)](/versions/0.9.1/api/tableframe#tabsdata.tableframe.functions.datetime.ExprDateTimeNameSpace.with_time_unit)

## X

- [xor() (Expr method)](/versions/0.9.1/api/tableframe#tabsdata.Expr.xor)

## Y

- [year() (ExprDateTimeNameSpace method)](/versions/0.9.1/api/tableframe#tabsdata.tableframe.functions.datetime.ExprDateTimeNameSpace.year)

## Z

- [zfill() (ExprStringNameSpace method)](/versions/0.9.1/api/tableframe#tabsdata.tableframe.expr.string.ExprStringNameSpace.zfill)

